// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HierarchyItem > classes > active class name > should have "active" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`HierarchyItem > classes > active class name > should not have "active" class name 1`] = `
[
  "hierarchy-item",
  "file",
]
`;

exports[`HierarchyItem > classes > file > should  not have "file" class name 1`] = `
[
  "hierarchy-item",
  "active",
]
`;

exports[`HierarchyItem > classes > file > should have "file" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`HierarchyItem > classes > focused class name > should have "focused" class name 1`] = `
[
  "hierarchy-item",
  "focused",
  "active",
  "file",
]
`;

exports[`HierarchyItem > classes > focused class name > should note have "focused" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`HierarchyItem > components > Arrow Icon > shoud not render arrow icon 1`] = `false`;

exports[`HierarchyItem > components > Arrow Icon > shoud render arrow icon 1`] = `true`;

exports[`HierarchyItem > components > Node Type Icon > should render "Node Dir Open" icon 1`] = `true`;

exports[`HierarchyItem > components > Node Type Icon > should render "Node Dir Open" icon 2`] = `true`;

exports[`HierarchyItem > components > Node Type Icon > should render "Node File" icon 1`] = `true`;

exports[`HierarchyItem > components > Node Type Icon > should render "Node Type" icon 1`] = `true`;

exports[`HierarchyItem > components > should render "Delete" button 1`] = `true`;

exports[`HierarchyItem > events > should emit "delete" event 1`] = `
[
  [
    {
      "id": "1",
      "parentId": null,
      "type": 1,
    },
  ],
]
`;

exports[`HierarchyItem > events > should emit "select" event 1`] = `
[
  [
    {
      "id": "1",
      "parentId": null,
      "type": 1,
    },
  ],
]
`;
